# Proven-National-Worker

./: .gitattributes  .gitignore  Aztec_Evm_license.md  Directory_tree.md  Integration_guide.md  License  Oversight_committee.md  Overview.md  PNWBridge.sol  PNW_whitepaper.md  README.md  Readme.md  compliance_tracking.leo  employer_agreement.leo  government_api.leo  main.leo  overview.md  payroll.leo  subdao_management.leo  worker_identity.leo
Config/: Network.json
Contracts/: Compliance_Tracking.leo  Deploy_contracts.py  Deploy_contracts.sh  Employer_agreement.leo  Farm_investment.leo  Government_api.rs  Merkle_decision_maker.leo  Merkle_decision_maker.rs  Merkle_helper.leo  Nft  PNW_bridge_payroll.sol  Payroll.leo  Process_tax_compliance.leo  SubDAO_citizen.leo  Subdao_management.leo  government_api.leo  worker_identity.leo
Contracts/Aleo/: Aleo_bridge.leo  Aleo_payroll_USDCpool.leo  Aleo_usdc_pool.leo  Certification_verifier.leo  Compliance_Tracking.leo  Employer_agreement.leo  (+22 more)
Git/: .gitignore
Licenses/: License
Migrations/: Deploy_subdao.leo  deploy_main.leo
Scripts/: Batch_process_payroll.leo  Compile.sh  Deploy.js  Deploy.sh  Deployment_script.sh  Integration_guide.md  PNW_whitepaper.md  Stellar_deployment.rs  Verify_Zpass.sh  Verify_ans.sh
Stellar/: Cargo.toml
Stellar/Src/: Stellar_Verifier.rs  Stellar_integrations.rs  Test_stellar_integrations.rs
Tests/: Government_api_test.rs  PNW_bridge_payroll_test.js  Run_tests.sh  Test_compliance.leo  Test_government_api.leo  Test_payroll.leo
Zk_payroll/: Stellar_soroban_payroll.rs  Zk_payroll_proof.leo
(+80 files in other folders)
