[package]
name = "zk_payroll"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.0.0"
aleo-sdk = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
